--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "gregwar/captcha": "1.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "~2.1.0",
         "pragmarx/google2fa": "^7.0"
     },
     "require-dev": {
