--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:8sQEhl6UueqKqVQKj05x8Bua8d3Nnq+qTc27T/TiflA=
+APP_KEY=base64:IKc+ZucaIF8tZm6pJXQK0d1aMA53pA36F8khP4XJwJo=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -17,8 +17,8 @@ CACHE_DRIVER=array
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=47.56.151.208
+REDIS_PASSWORD=orange201912061525
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
