验证码过期时间

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:IKc+ZucaIF8tZm6pJXQK0d1aMA53pA36F8khP4XJwJo=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
